--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,27 @@
-$red: red;
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,100;1,700;1,900&family=Roboto:wght@100;300&family=Rubik:ital,wght@1,300&display=swap");
+@import "~normalize.css";
+
+@import "header.scss";
+@import "toolbar.scss";
+@import "formula.scss";
+@import "table.scss";
+@import "dashboard.scss";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body {
-  background: $red;
+  font-family: "Roboto", sans-serif;
+  font-size: 12px;
+}
+
+.excel {
+  position: relative;
+  color: #888;
+  height: 100%;
+  max-width: 100%;
+  font-size: .8rem;
 }
